Mitad de traducciones completadas.

--- a/css/stylecontent/popups/cvPopup.css
+++ b/css/stylecontent/popups/cvPopup.css
@@ -64,6 +64,7 @@
 .cv-cyber-btn {
     padding: 1rem 2rem;
     font-size: 1.1rem;
+    margin-bottom: 1vw;
     cursor: pointer;
     border: none;
     background-color: #4CAF50;
