--- a/css/stylecontent/Sections/projectsSection.css
+++ b/css/stylecontent/Sections/projectsSection.css
@@ -191,7 +191,7 @@
 /* Media Queries para responsividad */
 
 /* Pantallas pequeñas (móviles) */
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .projects-title {
         font-size: 2rem;
         margin-bottom: 2rem;
@@ -222,8 +222,8 @@
     }
 }
 
-/* Pantallas medianas (tabletas) */
-@media (max-width: 1024px) {
+/* Pantallas pequeñas (movil) */
+@media (max-width: 480px) {
     .projects-title {
         font-size: 2.25rem;
         margin-bottom: 3rem;
