--- a/css/stylecontent/tooltips/flagsTooltip.css
+++ b/css/stylecontent/tooltips/flagsTooltip.css
@@ -5,7 +5,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-right: 0.25rem;
+
+    margin-bottom: 2rem;
     background: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 5px 10px;
